--- a/Proyecto/Aplicacion1/templates/login.html
+++ b/Proyecto/Aplicacion1/templates/login.html
@@ -100,10 +100,10 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="{% url 'home' %}">Reserva Deportiva</a>
+                <a>Reserva Deportiva</a>
             </div>
             <ul>
-                <li><a href="{% url 'home' %}">Inicio</a></li>
+                <li><a href="{% url 'index' %}">Inicio</a></li>
                 <li><a href="{% url 'register' %}">Registrarse</a></li>
             </ul>
         </nav>
