2 Nuevos cambios en la sesion

--- a/Proyecto/Aplicacion1/templates/index.html
+++ b/Proyecto/Aplicacion1/templates/index.html
@@ -121,7 +121,6 @@
                             {{ user.first_name|default:user.username }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                            <li><a class="dropdown-item" href="{% url 'profile' %}">Mi perfil</a></li>
                             <!-- Formulario para cerrar sesión -->
                             <li>
                                 <form action="{% url 'logout' %}" method="post" style="display:inline;">
@@ -143,7 +142,7 @@
 
             <!-- Buscador de campos por deporte -->
             <form method="GET" action="{% url 'index' %}" class="d-flex ms-3">
-                <input class="form-control me-2" type="search" name="buscar_deporte" placeholder="Buscar por deporte..." aria-label="Buscar">
+                <input class="form-control me-2" type="search" name="buscar_deporte" placeholder="Buscar por deporte...(Futbol, tenis, padel etc...)" aria-label="Buscar">
                 <button class="btn btn-outline-light" type="submit">Buscar</button>
             </form>
         </div>
