--- a/Proyecto/Aplicacion1/templates/login.html
+++ b/Proyecto/Aplicacion1/templates/login.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #2C3E50;
+            background-color: #343a40;
             color: white;
             padding: 10px 20px;
         }
@@ -49,7 +49,7 @@
         }
 
         footer {
-            background-color: #2C3E50;
+            background-color: #343a40;
             color: white;
             padding: 10px;
             text-align: center;
