--- a/Proyecto/Aplicacion1/templates/register.html
+++ b/Proyecto/Aplicacion1/templates/register.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #2C3E50;
+            background-color: #343a40;
             color: white;
             padding: 10px 20px;
         }
@@ -49,7 +49,7 @@
         }
 
         footer {
-            background-color: #2C3E50;
+            background-color: #343a40;
             color: white;
             padding: 10px;
             text-align: center;
@@ -103,7 +103,7 @@
                 <a href="{% url 'home' %}">Reserva Deportiva</a>
             </div>
             <ul>
-                <li><a href="{% url 'home' %}">Inicio</a></li>
+                <li><a href="{% url 'index' %}">Inicio</a></li>
                 <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
             </ul>
         </nav>
